# yrc-bench-fork

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CORRECTED_APPROACH_SUMMARY.md  README.md  README_coinrun_analysis.md  SCORE_VIDEO_FIX.md  THRESHOLD_EVALUATION_GUIDE.md  analyze_threshold_results.py  calibrate_afhp.py  coinrun_counterfactual_analysis.py  eval.py  eval_afhp.py  eval_afhp_bin.py  eval_afhp_seq.py  eval_policy.py  eval_strong_on_help.py  eval_thresholds.py  eval_thresholds_old.py  flags.py  gather_rollouts.py  generate_ensemble_seeds.py  generate_level_seeds.py  mock_coinrun_analysis.py  requirements.txt  requirements_dev.txt  requirements_minigrid.txt  scratch.txt  slurm_status_2026-05-12.md  slurm_status_2026-05-15.md  test_coverage.py  test_dependencies.py  train.py  train_no_threshold_search.py  train_svdd.py
.github/: copilot-instructions.md
analyzing/: README.md  afhp_plot.py  coinrun_counterfactual_analysis.py  episode_length_dist.py  icml_plot.py  paper_plot.py  plot_binned_ood_rate.py  plot_episode_metrics.py  plot_full_budget_afhp.py  plot_histogram.py  plot_ood.py  plot_ood_acc.py  plot_ood_rate.py  plot_policy_training_curves.py  plot_strong_reval_diff.py  plot_survival_rate.py  (+4 more)
lib/acs/: .gitignore  CLAUDE.md  README.md  procedure.md  pyproject.toml
lib/acs/ci/: format_and_check.sh
lib/acs/docs/: api_joint_sampler.md  api_reference.md  requirements.md
lib/acs/src/acs/: __init__.py  joint_sampler.py  sampler.py  types.py  wait_policy_sampler.py
lib/acs/tests/: test_joint_sampler_coverage.py  test_single_axis_sampler.py  test_wait_policy_aware_sampler.py  visualization_utils.py
(+237 files in other folders)
